--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
 	<version>0.1</version>
 	<description>
 	</description>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
 	<developers>
 		<developer>
 			<name>Hussachai Puripunpinyo</name>
