fix string escape/unescape, move escape code to JsonUtils

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <developers>
     <developer>
       <name>Hussachai Puripunpinyo</name>
-      <organization>Zappos IP</organization>
+      <organization>Zappos IP, Inc.</organization>
       <roles>
         <role>Software Engineer</role>
       </roles>
