--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
   <artifactId>zappos-json</artifactId>
   <version>0.1-alpha</version>
   
+  <name>Zappos JSON</name>
+  <url>https://github.com/Zappos/zappos-json</url>
   <description>
     Zappos-json is a Java library that can be used to convert plain old Java objects (POJO) 
     into their JSON representation, and vice versa. It uses code generation technique
@@ -71,6 +73,18 @@
     <plugins>
       
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+        <configuration>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <useReleaseProfile>false</useReleaseProfile>
+          <releaseProfiles>release</releaseProfiles>
+          <goals>deploy</goals>
+        </configuration>
+      </plugin>
+      
+      <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
         <version>1.6.6</version>
@@ -86,6 +100,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
         <version>1.6</version>
+        <!-- 
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+         -->
         <executions>
           <execution>
             <id>sign-artifacts</id>
